# foxhole-scrooper

./: README.md  TODO  params.toml  pyproject.toml
source/: config.py  core.py  mouse_manager.py
source/DEV/fh_mods/: War-WindowsNoEditor_NodeColoringTexChange.pak
source/DEV/test_results/: sparse_scanning_of_images.md
source/MC_locations/: default.toml
source/enums/: DetectedObject.py  EventTypes.py
source/helpers/: ClickLIstener.py  OffsetPoint.py  PILImageParser.py  Singleton.py  TryParse.py
source/modules/: BaseModule.py
source/modules/DataExtractors/: AOIExtractor.py  BaseDataExtractor.py  dev_ColorDetector.py  dev_MovingWindowScanner.py
source/modules/DataProcessors/: BaseDataProcessor.py
source/modules/ImageAcquirers/: BaseImageAcquirer.py  MSSImageAcquirer.py
source/modules/ImageProcessors/: BaseImageProcessor.py
source/modules/MovementController/: BaseMovementController.py  ClickCenter.py
source/modules/screenshot_takers/: BaseScreenshotTaker.py  MSSScreenshotTaker.py
source/transporter/event/: Event.py  ImageProcessed.py
source/typed_dicts/: DetectedObjectInstance.py
