[project]
name = "scrooper"
version = "0.1.0"
description = "Script for automated scrooping in game Foxhole. "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "pillow>=11.3.0",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
    "types-pillow>=10.2.0.20240822",
    "types-toml>=0.10.8.20240310",
]
